Fix invisible loading screen

--- a/src/loading-screen/LoadingScreen.module.css
+++ b/src/loading-screen/LoadingScreen.module.css
@@ -1,4 +1,4 @@
-.mainContainer {
+.loadingScreen {
   width: 640px;
   height: 480px;
   background-color: burlywood;
